# ic_signer

./: .gitignore  README.md  babel.config.js  canister_ids.json  dfx.json  package.json  tsconfig.json  webpack.config.js
src/: Cargo.toml  ic_signer.did
src/ic_signer/src/: crypto.rs  lib.rs  types.rs  utils.rs
src/signer_assets/: App.vue  index.html  index.js
src/signer_assets/src/lib/: index.ts  signer.did.js
src/signer_assets/src/router/: index.js
src/signer_assets/src/views/: Home.vue
webpack/: base.js  dfinity.js  prod.js
